# tensor-serve

./: .dockerignore  .gitignore  API.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  TUNINGS.md  ZIM_MANAGER.md  ai_client.py  config.json  config.py  conversations.db  docker-compose.yml  embedder.py  hybrid_search.py  ingest.py  main.py  manage_zim.py  multi_ingest.py  presets.json  presets.py  pyproject.toml  requirements.txt  reranker.py  tunings.json  tunings.py  utils.py  vectordb.py  zim_downloader.py  zim_manifest.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker.yml  publish.yml
api/: README.md  __init__.py  ai_client.py  bm25_index.py  cache.py  chunker.py  config.py  embedder.py  hybrid_search.py  ingest.py  main.py  multi_ingest.py  query_analyzer.py  query_expansion.py  reranker.py  search_profiles.py  utils.py  vectordb.py  web_search.py  zim_collections.py  zim_downloader.py
api/search_backends/: __init__.py  base.py  bm25_okapi.py  bm25_plus.py  faiss_flat.py  faiss_ivf.py
cli/: README.md  __init__.py  __main__.py  manage_zim.py  run_server.py
src/: README.md  __init__.py  ai_client.py  collections.py  config.py  conversations.py  hybrid_search.py  ingest.py  manage_zim.py  multi_ingest.py  presets.py  query_analyzer.py  utils.py  vectordb.py  zim_downloader.py
tensor_serve/: __init__.py  __main__.py
tensor_serve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: .README  README.md  conftest.py  test_ai_client.py  test_bm25.py  test_cache.py  test_chunker.py  test_collections_and_zim.py  test_config.py  test_conversations.py  test_embedder.py  test_openai_api.py  test_presets_and_zim.py  test_proxy_api.py  test_query_analyzer.py  test_reranker_and_hybrid.py  test_search_profiles.py  test_utils.py  test_vectordb.py
